fixed missing whitespace at small width

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -180,6 +180,13 @@ button:focus {
 }
 
 @media only screen and (max-width: 790px) {
+  html,
+  body {
+    position: relative;
+    width: 100%;
+    height: auto;
+  }
+
   #header,
   #project-carousel,
   #profile,
@@ -198,7 +205,7 @@ button:focus {
     display: grid;
     grid-template-columns: 1fr;
     /* grid-template-rows: 100px 1fr 1fr 1fr 1fr; */
-    grid-template-rows: 150px repeat(7, 200px) 175px 150px;
+    grid-template-rows: 150px repeat(7, 200px) 175px 150px 50px;
     gap: 2em;
   }
 
